<resources>
    <string name="app_name">Easyjob</string>


        <!-- Signup Activity Strings -->
        <string name="signup_title">Create Account</string>
        <string name="username_hint">Username</string>
        <string name="name_hint">Full Name</string>
        <string name="email_hint">Email</string>
        <string name="password_hint">Password</string>
        <string name="confirm_password_hint">Confirm Password</string>
        <string name="dob_hint">Date of Birth (DD/MM/YYYY)</string>
        <string name="gender_hint">Gender</string>
        <string name="mobile_hint">Mobile Number</string>
        <string name="address_hint">Address</string>
        <string name="remember_me">Remember me</string>
        <string name="signup_button">Sign Up</string>
        <string name="login_prompt">Already have an account? Login</string>

        <!-- Validation messages -->
        <string name="required_field">This field is required</string>
        <string name="password_mismatch">Passwords do not match</string>
        <string name="password_length">Password must be at least 6 characters</string>
        <string name="invalid_email">Please enter a valid email address</string>
        <string name="email_exists">Email already registered</string>
        <string name="registration_success">Registration successful!</string>
        <string name="registration_failed">Registration failed</string>

        <!-- Login Activity Strings (for reference) -->
        <string name="login_title">Login</string>
        <string name="forgot_password">Forgot Password</string>
        <string name="login_button">Login</string>
        <string name="signup_prompt">Don\'t have an account? Sign Up</string>
        <string name="fingerprint">Finger Print</string>


    <string name="find_jobs">Find Jobs</string>
    <string name="search_jobs">Search jobs...</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="security_settings">Security Settings</string>
    <string name="enable_security">Enable Security Features</string>
    <string name="language_settings">Language Settings</string>
    <string name="save_settings">Save Settings</string>
    <string name="settings_saved">Settings saved successfully!</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="search_hint">Search jobs, companies...</string>
    <string name="location_hint">Location</string>
    <string name="filter_all">All</string>
    <string name="filter_full_time">Full Time</string>
    <string name="filter_part_time">Part Time</string>
    <string name="filter_remote">Remote</string>

    <!-- Job item strings -->
    <string name="job_salary">Salary: %s</string>
    <string name="job_posted">Posted: %s</string>
    <string name="job_type">Type: %s</string>



    <!-- Add this for Google Play Services -->
    <integer name="google_play_services_version">12451000</integer>

    <string name="add_location">Add Location</string>
    <string name="full_time">Full Time</string>
    <string name="part_time">Part Time</string>
    <string name="recent_job_list">Recent Job List</string>

    <!-- Job titles -->
    <string name="product_designer">Product Designer</string>
    <string name="software_developer">Software Developer</string>
    <string name="web_designer">Web Designer</string>

    <!-- Company names -->
    <string name="google_inc">Google Inc. California, USA</string>
    <string name="microsoft_corp">Microsoft Corp. Washington, USA</string>
    <string name="apple_inc">Apple Inc. California, USA</string>

    <!-- Salaries -->
    <string name="salary_15_day">$15/Day</string>
    <string name="salary_25_hour">$25/Hour</string>
    <string name="salary_20_hour">$20/Hour</string>

    <!-- Job types -->
    <string name="job_type_part_time">Part Time</string>
    <string name="job_type_full_time">Full Time</string>
    <string name="job_type_remote">Remote</string>



    <string-array name="languages_array">
        <item>English</item>
        <item>සිංහල (Sinhala)</item>
    </string-array>
    </resources>
